# Stardew-Valley-TJ-Uni-

./: .gitattributes  .gitignore  README.md  convert.py  unix_convert.py
Classes/: Animal.cpp  Animal.h  AnimalConfig.h  AnimalFactory.cpp  AnimalFactory.h  AppDelegate.cpp  AppDelegate.h  AudioManager.cpp  AudioManager.h  Berry.cpp  Berry.h  BerrySeed.h  BreedItem.h  Carrot.cpp  Carrot.h  CarrotCrop.cpp  CarrotCrop.h  CarrotSeed.h  ConcreteToolFactories.h  Constants.h  CornCrop.cpp  CornCrop.h  Crop.cpp  Crop.h  CropFactory.cpp  CropFactory.h  CropGrowthState.cpp  CropGrowthState.h  CropItem.h  CropManager.cpp  CropManager.h  CropQualityStates.cpp  CropQualityStates.h  CropsManager.cpp  CropsManager.h  DiseaseThreatState.cpp  DroughtThreatState.cpp  Enums.h  FarmConfigManager.cpp  FarmConfigManager.h  (+105 more)
Resources/: FishingLayer.csb  maps.rar
Resources/animals/: chicken_idle_down.plist  chicken_idle_left.plist  chicken_idle_right.plist  chicken_idle_up.plist  chicken_walk_down.plist  chicken_walk_left.plist  chicken_walk_right.plist  chicken_walk_up.plist  sheep_idle_down.plist  sheep_idle_left.plist  sheep_idle_right.plist  sheep_idle_up.plist  sheep_walk_down.plist  sheep_walk_left.plist  sheep_walk_right.plist  sheep_walk_up.plist
Resources/configs/maps/: farm_types.json
Resources/inside/: base.plist  base.tsx  bed.tsx  black_sofa.tsx  blue_sofa.tsx  boundary.plist  boundary.tsx  chair.tsx  chair_2.tsx  dark_bookshelf.tsx  dark_fireplace.tsx  inside.tiled-session  inside.tmx  red_sofa_left.tsx  round_table.tsx  shelf_1.tsx  shelf_2.tsx  shelf_3.tsx  shelf_4.tsx  tv_back.tsx
Resources/inside/asset/decorates/: chair.png~  chair_2.png~  dark_bookshelf.png~  dark_fireplace.png~  round_table.png~  shelf_1.png~  shelf_2.png~  shelf_3.png~  shelf_4.png~  tv_back.png~
Resources/inside/asset/useful_items/: bed_2.png~  black_sofa.png~  blue_sofa.png~  red_sofa_left.png~
Resources/inside/inside_pack/: InsideConfigManager.cpp  InsideConfigManager.h  InsideMapManager.cpp  InsideMapManager.h  InsideMapRenderer.cpp  InsideMapRenderer.h  MapConstants.h  SpritePathManager.cpp  SpritePathManager.h
Resources/maps/farm/island/: README.md  arable.plist  arable.tsx  base_fall.plist  base_fall.tsx  base_spring.plist  base_spring.tsx  base_summer.plist  base_summer.tsx  base_winter.plist  base_winter.tsx  boat.tsx  boundary_fall.plist  boundary_fall.tsx  boundary_spring.plist  boundary_spring.tsx  boundary_summer.plist  boundary_summer.tsx  boundary_winter.plist  boundary_winter.tsx  bushes.tsx  bushes_1_fall.plist  bushes_1_fall.tsx  bushes_1_spring.plist  bushes_1_spring.tsx  bushes_1_summer.plist  bushes_1_summer.tsx  bushes_1_winter.plist  bushes_1_winter.tsx  floor.tsx  house_1_fall.plist  house_1_fall.tsx  house_1_spring.plist  house_1_spring.tsx  house_1_springplist  house_1_summer.plist  house_1_summer.tsx  house_1_winter.plist  house_1_winter.tsx  island.tiled-session  (+30 more)
Resources/maps/farm/standard/: arable.plist  arable.tsx  arable_2.tsx  base_fall.plist  base_fall.tsx  base_spring.plist  base_spring.tsx  base_summer.plist  base_summer.tsx  base_winter.plist  base_winter.tsx  boundary_fall.plist  boundary_spring.plist  boundary_summer.plist  boundary_winter.plist  farmland.plist  farmland.png~  farmland.tsx  house_1_fall.tsx  house_1_spring.tsx  house_1_summer.tsx  house_1_winter.tsx  myhouse_1_fall.tsx  myhouse_1_spring.tsx  myhouse_1_summer.tsx  myhouse_1_winter.tsx  obj_forbidden_tree_fall.tsx  obj_forbidden_tree_spring.tsx  obj_forbidden_tree_summer.tsx  obj_forbidden_tree_winter.tsx  obj_move_bushes_fall.tsx  obj_move_bushes_spring.tsx  obj_move_bushes_summer.tsx  obj_move_bushes_winter.tsx  standard.tiled-session  (+7 more)
Resources/plist/: chop_left.plist  chop_right.plist  hoe_left.plist  hoe_right.plist  kettle_left.plist  pickaxe_right.plist  reap_right.plist
Resources/tool/plist/: chop_down.plist  chop_up.plist  hoe_down.plist  hoe_up.plist  kettle_down.plist  kettle_right.plist  pickaxe_down.plist  pickaxe_left.plist  pickaxe_up.plist  reap_down.plist  reap_left.plist  reap_up.plist
SVTU/: CMakeLists.txt
SVTU/Classes/: AppDelegate.cpp  AppDelegate.h  GameScene.cpp  GameScene.h  HelloWorldScene.cpp  HelloWorldScene.h  MyScene.cpp  MyScene.h  PhysicsTestScene.cpp  PhysicsTestScene.h
SVTU/Classes/map/builder/: MapBuilder.cpp  MapBuilder.h
SVTU/Classes/map/config/: FarmConfigManager.cpp  FarmConfigManager.h
SVTU/Classes/map/core/: FarmMapManager.cpp  FarmMapManager.h  GameMap.cpp  GameMap.h  MapCameraManager.h  MapLayer.cpp  MapLayer.h  MapManager.cpp  MapManager.h  Tile.cpp  Tile.h
SVTU/Classes/map/decorators/: BoundaryAdder.h  PhysicsAdder.h
SVTU/Classes/map/loader/: MapLoader.cpp  MapLoader.h
SVTU/Classes/map/utils/: FarmMapRenderer.cpp  FarmMapRenderer.h  GameObject.h  GameObjectFactory.h  LayerRenderer.cpp  LayerRenderer.h  LayerRendererFactory.cpp  LayerRendererFactory.h  MapConstants.h  MapUtils.cpp  MapUtils.h  SpritePathManager.cpp  SpritePathManager.h
SVTU/Classes/scenes/: BaseScene.cpp  BaseScene.h  GameScene.cpp  GameScene.h
SVTU/Resources/configs/maps/: farm_types.json
SVTU/Resources/maps/: test_map.tmx
SVTU/Resources/maps/farm/island/: README.md  arable.plist  base_fall.plist  base_spring.tsx  base_summer.plist  base_summer.tsx  base_winter.plist  boat.tsx  boundary_fall.plist  boundary_fall.tsx  boundary_spring.tsx  boundary_summer.tsx  boundary_winter.plist  boundary_winter.tsx  bushes.tsx  bushes_1_fall.tsx  bushes_1_spring.tsx  bushes_1_summer.plist  bushes_1_summer.tsx  bushes_1_winter.plist  floor.tsx  house_1_fall.plist  house_1_fall.tsx  house_1_spring.plist  house_1_spring.tsx  house_1_springplist  house_1_summer.plist  house_1_summer.tsx  house_1_winter.tsx  island.tiled-session  island_fall.tmx  island_spring.tmx  island_summer.tmx  island_winter.tmx  myhouse_1_fall.tsx  myhouse_1_summer.plist  myhouse_1_summer.tsx  myhouse_1_winter.plist  s4_floor.plist  s5_bushes.plist  (+12 more)
SVTU/proj.linux/: main.cpp
SVTU/proj.win32/: SVTU.sln
docs/: MapEventManager 类的功能与设计评估.md  MapLayer.h.md  TMXTiledMap.md  地图系统类详解.md  地图系统设计方案.md  当前架构评估.md
